# charcoal

./: .gitignore  CMakeLists.txt  README.md  main.cpp
charcoal/core/: boolean.hpp  concepts_cast.hpp  primitives_types.hpp
src/: main.cpp  message_box.hpp  temperature.hpp
